// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlFormatEditor should render label template help 1`] = `
<React.Fragment>
  <LabelTemplateFlyout
    isVisible={true}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.type.label"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.help.button"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        Label template help
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <FormatEditorSamples
    samples={Array []}
  />
</React.Fragment>
`;

exports[`UrlFormatEditor should render normally 1`] = `
<React.Fragment>
  <LabelTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.type.label"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.help.button"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        Label template help
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <FormatEditorSamples
    samples={Array []}
  />
</React.Fragment>
`;

exports[`UrlFormatEditor should render url template help 1`] = `
<React.Fragment>
  <LabelTemplateFlyout
    isVisible={false}
    onClose={[Function]}
  />
  <UrlTemplateFlyout
    isVisible={true}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.type.label"
        values={Object {}}
      />
    }
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.help.button"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        Label template help
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplate.label"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <FormatEditorSamples
    samples={Array []}
  />
</React.Fragment>
`;
